<resources>
    <string name="app_name" translatable="false">ProjetAndroid_DG_BA</string>
    <string name="String_jouer">Play</string>
    <string name="String_classement">ranking</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="bouton_moins" translatable="false">(-)</string>
    <string name="bouton_supprimer">DELETE</string>
    <string name="toolbar_finirgame">stop the game</string>
    <string name="toolbar_retour">back</string>
    <string name="retourBtnClassement">back</string>
    <string name="ERREUR_TROP_GRAND">value too high</string>
    <string name="remainingLives">remaining lives</string>
    <string name="buttonClearClassement">Clear scores</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="textviewScore">Score</string>
    <string name="enter_nickname">enter your nickname</string>
    <string name="button_noSave">don\'t save</string>
    <string name="button_Save">save</string>
    <string name="ERREUR_PSEUDONOTDEFINE">nickname not entered</string>
</resources>
